--- a/misty_capstone_folder/mists-working.ipynb
+++ b/misty_capstone_folder/mists-working.ipynb
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2016 = spark.read.csv('../data/data_Q*_2016/*.csv', header=True)"
+    "df_2016 = spark.read.csv('../data/data_Q*_2016/*.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "95"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,16 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2017 = spark.read.csv('../data/data_Q*_2017/*.csv', header=True)"
+    "df_2017 = spark.read.csv('../data/data_Q*_2017/*.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "95"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,20 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read quarters in separately since they have different column lengths\n",
-    "df_2018_1 = spark.read.csv('../data/data_Q1_2018/*.csv', header=True)\n",
-    "df_2018_2 = spark.read.csv('../data/data_Q2_2018/*.csv', header=True)\n",
-    "df_2018_3 = spark.read.csv('../data/data_Q3_2018/*.csv', header=True)\n",
-    "df_2018_4 = spark.read.csv('../data/data_Q4_2018/*.csv', header=True)"
+    "df_2018_1 = spark.read.csv('../data/data_Q1_2018/*.csv', header=True, inferSchema=True)\n",
+    "df_2018_2 = spark.read.csv('../data/data_Q2_2018/*.csv', header=True, inferSchema=True)\n",
+    "df_2018_3 = spark.read.csv('../data/data_Q3_2018/*.csv', header=True, inferSchema=True)\n",
+    "df_2018_4 = spark.read.csv('../data/data_Q4_2018/*.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -161,16 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2019 = spark.read.csv('../data/data_Q*_2019/*.csv', header=True)"
+    "df_2019 = spark.read.csv('../data/data_Q*_2019/*.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "129"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +281,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- serial_number: string (nullable = true)\n",
+      " |-- model: string (nullable = true)\n",
+      " |-- capacity_bytes: long (nullable = true)\n",
+      " |-- failure: integer (nullable = true)\n",
+      " |-- smart_9_raw: integer (nullable = true)\n",
+      " |-- smart_5_raw: integer (nullable = true)\n",
+      " |-- smart_187_raw: integer (nullable = true)\n",
+      " |-- smart_188_raw: long (nullable = true)\n",
+      " |-- smart_197_raw: integer (nullable = true)\n",
+      " |-- smart_198_raw: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_raw.select('serial_number', 'model', 'capacity_bytes',\n",
+    "             'failure', 'smart_9_raw', 'smart_5_raw','smart_187_raw',\n",
+    "             'smart_188_raw', 'smart_197_raw', 'smart_198_raw').printSchema()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df_raw.groupby('serial_number', 'model', 'capacity_bytes'\n",
-    "                   ).agg(max('failure'), max('smart_9_raw'), max('smart_5_raw'), \n",
-    "                        max('smart_187_raw') , max('smart_197_raw'), max('smart_198_raw')\n",
+    "                   ).agg(max('failure'), max('smart_9_raw'), max('smart_5_raw'), max('smart_187_raw'),\n",
+    "                        max('smart_188_raw'), max('smart_197_raw'), max('smart_198_raw')\n",
     "                        )"
    ]
   },
@@ -328,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = df.select(\"*\").toPandas()"
+    "df = df.select(\"*\").toPandas()"
    ]
   },
   {
@@ -344,20 +374,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.to_csv(r'./hard_drives_smart_5.csv')"
+    "df.to_csv(r'./hard_drives_smart_5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('hard_drives_smart_5.csv').drop('Unnamed: 0',axis=1)"
+    "# df = pd.read_csv('hard_drives_smart_5.csv').drop('Unnamed: 0',axis=1)"
    ]
   },
   {
@@ -368,15 +398,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prepare"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -385,18 +408,19 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 169073 entries, 0 to 169072\n",
-      "Data columns (total 9 columns):\n",
+      "Data columns (total 10 columns):\n",
       "serial_number         169072 non-null object\n",
       "model                 169073 non-null object\n",
       "capacity_bytes        169073 non-null int64\n",
-      "max(failure)          169073 non-null int64\n",
+      "max(failure)          169073 non-null int32\n",
       "max(smart_9_raw)      161975 non-null float64\n",
       "max(smart_5_raw)      161851 non-null float64\n",
       "max(smart_187_raw)    104189 non-null float64\n",
+      "max(smart_188_raw)    104179 non-null float64\n",
       "max(smart_197_raw)    161841 non-null float64\n",
       "max(smart_198_raw)    161841 non-null float64\n",
-      "dtypes: float64(5), int64(2), object(2)\n",
-      "memory usage: 11.6+ MB\n"
+      "dtypes: float64(6), int32(1), int64(1), object(2)\n",
+      "memory usage: 12.3+ MB\n"
      ]
     }
    ],
@@ -406,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -437,6 +461,7 @@
        "      <th>max(smart_9_raw)</th>\n",
        "      <th>max(smart_5_raw)</th>\n",
        "      <th>max(smart_187_raw)</th>\n",
+       "      <th>max(smart_188_raw)</th>\n",
        "      <th>max(smart_197_raw)</th>\n",
        "      <th>max(smart_198_raw)</th>\n",
        "    </tr>\n",
@@ -444,60 +469,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>176FT026T</td>\n",
-       "      <td>TOSHIBA MQ01ABF050M</td>\n",
-       "      <td>500107862016</td>\n",
+       "      <td>PL1311LAG1SJAA</td>\n",
+       "      <td>Hitachi HDS5C4040ALE630</td>\n",
+       "      <td>4000787030016</td>\n",
        "      <td>0</td>\n",
-       "      <td>9965.0</td>\n",
+       "      <td>43819.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>17eddeea3c620010</td>\n",
-       "      <td>DELLBOSS VD</td>\n",
-       "      <td>480036847616</td>\n",
+       "      <td>Z305KB36</td>\n",
+       "      <td>ST4000DM000</td>\n",
+       "      <td>4000787030016</td>\n",
        "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>31045.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18K0A02ZF97G</td>\n",
-       "      <td>TOSHIBA MG07ACA14TA</td>\n",
-       "      <td>14000519643136</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>43.0</td>\n",
+       "      <td>MJ0351YNG9MZXA</td>\n",
+       "      <td>Hitachi HDS5C3030ALA630</td>\n",
+       "      <td>3000592982016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41668.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2AGHLPBY</td>\n",
-       "      <td>HGST HUH721212ALN604</td>\n",
-       "      <td>12000138625024</td>\n",
+       "      <td>ZA11NHSN</td>\n",
+       "      <td>ST8000DM002</td>\n",
+       "      <td>8001563222016</td>\n",
        "      <td>0</td>\n",
-       "      <td>990.0</td>\n",
+       "      <td>26284.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2AGM5WEY</td>\n",
-       "      <td>HGST HUH721212ALN604</td>\n",
-       "      <td>12000138625024</td>\n",
+       "      <td>MJ1311YNG2ZSEA</td>\n",
+       "      <td>Hitachi HDS5C3030ALA630</td>\n",
+       "      <td>3000592982016</td>\n",
        "      <td>0</td>\n",
-       "      <td>978.0</td>\n",
+       "      <td>47994.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -507,29 +537,29 @@
        "</div>"
       ],
       "text/plain": [
-       "      serial_number                 model  capacity_bytes  max(failure)  \\\n",
-       "0         176FT026T   TOSHIBA MQ01ABF050M    500107862016             0   \n",
-       "1  17eddeea3c620010           DELLBOSS VD    480036847616             0   \n",
-       "2      18K0A02ZF97G   TOSHIBA MG07ACA14TA  14000519643136             1   \n",
-       "3          2AGHLPBY  HGST HUH721212ALN604  12000138625024             0   \n",
-       "4          2AGM5WEY  HGST HUH721212ALN604  12000138625024             0   \n",
+       "    serial_number                    model  capacity_bytes  max(failure)  \\\n",
+       "0  PL1311LAG1SJAA  Hitachi HDS5C4040ALE630   4000787030016             0   \n",
+       "1        Z305KB36              ST4000DM000   4000787030016             0   \n",
+       "2  MJ0351YNG9MZXA  Hitachi HDS5C3030ALA630   3000592982016             0   \n",
+       "3        ZA11NHSN              ST8000DM002   8001563222016             0   \n",
+       "4  MJ1311YNG2ZSEA  Hitachi HDS5C3030ALA630   3000592982016             0   \n",
        "\n",
-       "   max(smart_9_raw)  max(smart_5_raw)  max(smart_187_raw)  max(smart_197_raw)  \\\n",
-       "0            9965.0               0.0                 NaN                 0.0   \n",
-       "1               NaN               NaN                 NaN                 NaN   \n",
-       "2              99.0              43.0                 NaN                 0.0   \n",
-       "3             990.0               0.0                 NaN                 0.0   \n",
-       "4             978.0               0.0                 NaN                 0.0   \n",
+       "   max(smart_9_raw)  max(smart_5_raw)  max(smart_187_raw)  max(smart_188_raw)  \\\n",
+       "0           43819.0               0.0                 NaN                 NaN   \n",
+       "1           31045.0               0.0                 0.0                 0.0   \n",
+       "2           41668.0               0.0                 NaN                 NaN   \n",
+       "3           26284.0               0.0                 0.0                 0.0   \n",
+       "4           47994.0               0.0                 NaN                 NaN   \n",
        "\n",
-       "   max(smart_198_raw)  \n",
-       "0                 0.0  \n",
-       "1                 NaN  \n",
-       "2                 0.0  \n",
-       "3                 0.0  \n",
-       "4                 0.0  "
+       "   max(smart_197_raw)  max(smart_198_raw)  \n",
+       "0                 0.0                 0.0  \n",
+       "1                 0.0                 0.0  \n",
+       "2                 0.0                 0.0  \n",
+       "3                 0.0                 0.0  \n",
+       "4                 0.0                 0.0  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
