--- a/tim_capstone_folder/pipeline.ipynb
+++ b/tim_capstone_folder/pipeline.ipynb
@@ -3194,67 +3194,67 @@
      "output_type": "stream",
      "text": [
       "serial_number\n",
-      "S300WCSR           1\n",
-      "ZJV03MG3           1\n",
-      "ZA14ESS5           1\n",
-      "MJ0351YNG9RD6A     1\n",
-      "ZA153SQX           1\n",
-      "ZA10MCJ8           1\n",
-      "ZA11RWPF           1\n",
-      "PL2331LAHE3B5J     1\n",
-      "MJ0351YNG9W1PA     1\n",
-      "Z302613N           1\n",
-      "ZJV0WFL6           1\n",
-      "ZA14ECN5           1\n",
-      "PL1311LAG1YU0A     1\n",
-      "ZJV0WFTS           1\n",
-      "PL1311LAG2AW7H     1\n",
-      "PL1331LAHGGRKH     1\n",
-      "ZCH06G4B           1\n",
-      "PL1331LAHDYDTH     1\n",
-      "JK11A4YAKBUYWW     1\n",
-      "PL2331LAGMW3DJ     1\n",
-      "PL2331LAHDH1WJ     1\n",
-      "VKGJSJMX           1\n",
-      "ZJV2E9CF           1\n",
-      "ZA14E943           1\n",
-      "ZJV0TC8S           1\n",
-      "ZA180N6K           1\n",
-      "AAHEHRYH           1\n",
-      "ZJV1KLVR           1\n",
-      "ZA13Z5TF           1\n",
-      "ZA10JWMY           1\n",
+      "JK11A5B8J7SN1X     1\n",
+      "ZA18BTQY           1\n",
+      "PL1331LAHBN6RH     1\n",
+      "ZCH06LS0           1\n",
+      "S300Z5VY           1\n",
+      "PL2331LAHDWPYJ     1\n",
+      "PL1331LAHBY13H     1\n",
+      "JK1105B8GDMALX     1\n",
+      "ZCH070H7           1\n",
+      "ZA11TWMC           1\n",
+      "Z4D07QXP           1\n",
+      "PL1331LAHEEMDH     1\n",
+      "ZA12NGZ9           1\n",
+      "PL2331LAHDAESJ     1\n",
+      "ZCH0BS0F           1\n",
+      "ZJV2ET3G           1\n",
+      "WD-WMC4N0D7XHEM    1\n",
+      "ZJV0Y5Q4           1\n",
+      "ZCH0CP5A           1\n",
+      "38M0A019F97G       1\n",
+      "ZJV00W20           1\n",
+      "ZCH0CK2T           1\n",
+      "ZCH0D3NJ           1\n",
+      "Z3015EPE           1\n",
+      "AAHK1JDH           1\n",
+      "ZA189YD8           1\n",
+      "ZCH0CKCD           1\n",
+      "ZJV03FVV           1\n",
+      "Z305D6X1           1\n",
+      "ZCH074C9           1\n",
       "                  ..\n",
-      "PL2331LAGSU4GJ     1\n",
-      "S300VL07           1\n",
-      "PL1331LAHBSRUH     1\n",
-      "Z304KC0V           1\n",
-      "Z304JWKF           1\n",
-      "Z300PB8G           1\n",
-      "Z300WEYJ           1\n",
-      "ZJV5MS8T           1\n",
-      "PL1331LAGSPLEH     1\n",
-      "WD-WMC1T0755438    1\n",
-      "PL1331LAHBSRVH     1\n",
-      "Z300P898           1\n",
-      "ZCH0D4D3           1\n",
-      "8CGKS7RG           1\n",
-      "88P0A0CPF97G       1\n",
-      "ZCH0D268           1\n",
-      "AAG74GJH           1\n",
-      "PL1331LAGAGHNH     1\n",
-      "PL2331LAHBHB1J     1\n",
-      "ZJV03X0W           1\n",
-      "S2T0JX0D400725     1\n",
-      "Z305867E           1\n",
-      "ZA13NZAG           1\n",
-      "8CGDG2UH           1\n",
-      "Z305B6W8           1\n",
-      "PL2331LAHDEHEJ     1\n",
-      "ZJV0016J           1\n",
-      "S300XE2A           1\n",
-      "PL2331LAGMK3UJ     1\n",
-      "W300KLMM           1\n",
+      "Z3029G1T           1\n",
+      "W4J1JFPJ           1\n",
+      "PL2331LAGMGA1J     1\n",
+      "WD-WMAYV0000510    1\n",
+      "Z3025L56           1\n",
+      "Z3020S49           1\n",
+      "ZA17ZNGG           1\n",
+      "Z305B6ZQ           1\n",
+      "MJ0351YNGA6M0A     1\n",
+      "Z300ND19           1\n",
+      "2AGPT3GY           1\n",
+      "Z304KBKC           1\n",
+      "PL2331LAHDG7YJ     1\n",
+      "PL2331LAHBX32J     1\n",
+      "ZA1818PB           1\n",
+      "ZJV0XZ8E           1\n",
+      "ZJV5JXVY           1\n",
+      "AAG1BE9H           1\n",
+      "Z305PHLV           1\n",
+      "Z300WCQA           1\n",
+      "9XW01B9H           1\n",
+      "ZA12MTBM           1\n",
+      "JK11A8B9J6RWTF     1\n",
+      "ZA180QH5           1\n",
+      "ZA174QME           1\n",
+      "AAG3V86H           1\n",
+      "ZCH09AVS           1\n",
+      "PL1331LAGTHTSH     1\n",
+      "ZCH08Z2Q           1\n",
+      "MK0301YHGK08GA     1\n",
       "Name: serial_number, Length: 162024, dtype: int64\n",
       "\n",
       "manufacturer\n",
@@ -3299,36 +3299,36 @@
       "TOSHIBA MD04ABA400V                      147\n",
       "HGST HDS5C4040ALE630                     116\n",
       "                                       ...  \n",
-      "WDC WD2500AAJS                             3\n",
-      "Hitachi HDS724040ALE640                    3\n",
-      "WDC WD10EARS                               3\n",
+      "Seagate BarraCuda SSD ZA2000CM10002        3\n",
       "ST6000DM004                                3\n",
       "WDC WD3200AAJS                             3\n",
-      "Seagate BarraCuda SSD ZA2000CM10002        3\n",
+      "Hitachi HDS724040ALE640                    3\n",
+      "WDC WD10EARS                               3\n",
+      "WDC WD2500AAJS                             3\n",
       " 00MD00                                    2\n",
+      "WDC WD3200AAJB                             2\n",
       "WDC WD10EARX                               2\n",
       "WDC WD5003ABYX                             2\n",
       "WDC WD1600BPVT                             2\n",
-      "WDC WD3200AAJB                             2\n",
-      "WDC WD10EALS                               1\n",
-      "Hitachi HDT725025VLA380                    1\n",
-      "WDC WD2500BEVT                             1\n",
-      "ST3500320AS                                1\n",
-      "ST33000651AS                               1\n",
-      "WDC WD3200LPVX                             1\n",
       "WDC WD3200BEKT                             1\n",
-      "ST1000LM024 HN                             1\n",
-      "WDC WD800LB                                1\n",
-      "WDC WD800JD                                1\n",
-      "SAMSUNG HD154UI                            1\n",
-      "WDC WD1000FYPS                             1\n",
-      "ST31500341AS                               1\n",
-      "HGST HMS5C4040BLE641                       1\n",
-      "WDC WD3200AAKS                             1\n",
-      "WDC WD1001FALS                             1\n",
+      "WDC WD3200LPVX                             1\n",
+      "ST3500320AS                                1\n",
       "Hitachi HDS5C3030BLE630                    1\n",
-      "WDC WD15EARS                               1\n",
+      "Hitachi HDT725025VLA380                    1\n",
       "WDC WD2500AAJB                             1\n",
+      "WDC WD2500BEVT                             1\n",
+      "WDC WD15EARS                               1\n",
+      "HGST HMS5C4040BLE641                       1\n",
+      "WDC WD800JD                                1\n",
+      "WDC WD10EALS                               1\n",
+      "SAMSUNG HD154UI                            1\n",
+      "ST1000LM024 HN                             1\n",
+      "WDC WD1000FYPS                             1\n",
+      "ST33000651AS                               1\n",
+      "WDC WD800LB                                1\n",
+      "WDC WD3200AAKS                             1\n",
+      "ST31500341AS                               1\n",
+      "WDC WD1001FALS                             1\n",
       "Name: model, Length: 103, dtype: int64\n",
       "\n",
       "capacity_gigabytes\n",
@@ -5328,36 +5328,36 @@
        "TOSHIBA MD04ABA400V          147\n",
        "HGST HDS5C4040ALE630         116\n",
        "                           ...  \n",
-       "WDC WD800JB                    4\n",
+       "ST250LT007                     4\n",
        "Hitachi HDS724040ALE640        3\n",
        "WDC WD10EARS                   3\n",
        "ST6000DM004                    3\n",
-       "WDC WD2500AAJS                 3\n",
        "WDC WD3200AAJS                 3\n",
+       "WDC WD2500AAJS                 3\n",
        "WDC WD3200AAJB                 2\n",
-       "WDC WD1600BPVT                 2\n",
        "WDC WD10EARX                   2\n",
        "WDC WD5003ABYX                 2\n",
-       "WDC WD3200BEKT                 1\n",
-       "Hitachi HDT725025VLA380        1\n",
-       "ST33000651AS                   1\n",
-       "WDC WD800LB                    1\n",
-       "SAMSUNG HD154UI                1\n",
+       "WDC WD1600BPVT                 2\n",
        "ST3500320AS                    1\n",
-       "WDC WD1000FYPS                 1\n",
-       "HGST HMS5C4040BLE641           1\n",
-       "ST31500341AS                   1\n",
-       "WDC WD1001FALS                 1\n",
-       "WDC WD10EALS                   1\n",
-       "ST1000LM024 HN                 1\n",
        "WDC WD3200AAKS                 1\n",
-       "WDC WD3200LPVX                 1\n",
-       "WDC WD2500AAJB                 1\n",
-       " 00MD00                        1\n",
-       "WDC WD15EARS                   1\n",
-       "WDC WD2500BEVT                 1\n",
-       "Hitachi HDS5C3030BLE630        1\n",
        "WDC WD800JD                    1\n",
+       "Hitachi HDT725025VLA380        1\n",
+       "WDC WD2500AAJB                 1\n",
+       "Hitachi HDS5C3030BLE630        1\n",
+       "WDC WD1001FALS                 1\n",
+       "WDC WD3200BEKT                 1\n",
+       "ST1000LM024 HN                 1\n",
+       "WDC WD15EARS                   1\n",
+       "ST33000651AS                   1\n",
+       " 00MD00                        1\n",
+       "WDC WD3200LPVX                 1\n",
+       "WDC WD2500BEVT                 1\n",
+       "SAMSUNG HD154UI                1\n",
+       "WDC WD1000FYPS                 1\n",
+       "WDC WD10EALS                   1\n",
+       "ST31500341AS                   1\n",
+       "HGST HMS5C4040BLE641           1\n",
+       "WDC WD800LB                    1\n",
        "Name: model, Length: 97, dtype: int64"
       ]
      },
@@ -6337,36 +6337,36 @@
        "ST9250315AS                   56\n",
        "ST3160316AS                   53\n",
        "                           ...  \n",
-       "WDC WD800JB                    4\n",
-       "WDC WD2500AAJS                 3\n",
-       "Hitachi HDS724040ALE640        3\n",
+       "ST8000DM004                    4\n",
        "WDC WD10EARS                   3\n",
        "WDC WD3200AAJS                 3\n",
-       "WDC WD10EARX                   2\n",
+       "Hitachi HDS724040ALE640        3\n",
+       "WDC WD2500AAJS                 3\n",
        "WDC WD5003ABYX                 2\n",
        "WDC WD1600BPVT                 2\n",
        "WDC WD3200AAJB                 2\n",
-       "ST31500341AS                   1\n",
-       "WDC WD2500BEVT                 1\n",
-       "WDC WD1001FALS                 1\n",
-       "WDC WD3200LPVX                 1\n",
-       "WDC WD15EARS                   1\n",
-       " 00MD00                        1\n",
-       "Hitachi HDT725025VLA380        1\n",
-       "ST33000651AS                   1\n",
-       "WDC WD10EALS                   1\n",
-       "WDC WD3200BEKT                 1\n",
-       "WDC WD2500AAJB                 1\n",
+       "WDC WD10EARX                   2\n",
+       "ST3500320AS                    1\n",
        "WDC WD800JD                    1\n",
        "TOSHIBA HDWF180                1\n",
-       "ST3500320AS                    1\n",
        "WDC WD800LB                    1\n",
-       "SAMSUNG HD154UI                1\n",
-       "ST1000LM024 HN                 1\n",
-       "WDC WD3200AAKS                 1\n",
-       "ST2000VN000                    1\n",
-       "WDC WD1000FYPS                 1\n",
+       "Hitachi HDT725025VLA380        1\n",
+       "WDC WD2500AAJB                 1\n",
        "Hitachi HDS5C3030BLE630        1\n",
+       "WDC WD15EARS                   1\n",
+       "WDC WD3200LPVX                 1\n",
+       "WDC WD3200BEKT                 1\n",
+       " 00MD00                        1\n",
+       "WDC WD1001FALS                 1\n",
+       "WDC WD1000FYPS                 1\n",
+       "WDC WD3200AAKS                 1\n",
+       "ST1000LM024 HN                 1\n",
+       "ST2000VN000                    1\n",
+       "SAMSUNG HD154UI                1\n",
+       "WDC WD2500BEVT                 1\n",
+       "WDC WD10EALS                   1\n",
+       "ST31500341AS                   1\n",
+       "ST33000651AS                   1\n",
        "Name: model, Length: 92, dtype: int64"
       ]
      },
@@ -7127,7 +7127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7140,7 +7140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7149,7 +7149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7158,7 +7158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -7175,7 +7175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -7189,7 +7189,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7200,7 +7200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -7209,7 +7209,7 @@
        "(97520, 1)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7220,7 +7220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -7229,7 +7229,7 @@
        "(24380, 1)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7240,7 +7240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -7249,7 +7249,7 @@
        "97520.0"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7260,7 +7260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7278,7 +7278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -7293,7 +7293,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7304,7 +7304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -7332,7 +7332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -7347,7 +7347,7 @@
        "                       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7360,7 +7360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -7378,7 +7378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7387,7 +7387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7396,7 +7396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -7414,7 +7414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -7424,7 +7424,7 @@
        "       [    0,  2078]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7436,7 +7436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -7485,7 +7485,7 @@
        "1      0  2078"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7498,7 +7498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7524,6 +7524,96 @@
     "\n",
     "# Overall ACCURACY\n",
     "ACC = (TP+TN)/(TP+FP+FN+TN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test Data Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_rf_test = rf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_proba_rf_test = rf.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of random forest classifier on test set: 1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Accuracy of random forest classifier on test set: {:.2f}'\n",
+    "     .format(rf.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[23860,     0],\n",
+       "       [    0,   520]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm_test = (confusion_matrix(y_test, y_pred_rf_test))\n",
+    "cm_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     23860\n",
+      "           1       1.00      1.00      1.00       520\n",
+      "\n",
+      "    accuracy                           1.00     24380\n",
+      "   macro avg       1.00      1.00      1.00     24380\n",
+      "weighted avg       1.00      1.00      1.00     24380\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred_rf_test))"
    ]
   },
   {
